--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,8 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="alternate icon" type="image/png" href="favicon.png" />
 
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -38,7 +39,7 @@
   <!-- Fallback para Material Icons -->
   <link href="assets/styles/material_icons.css" rel="stylesheet">
 
-  <title>serch_restapp</title>
+  <title>Serch Restapp - Sistema de Gestión</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
