--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,13 @@
 
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+    html,
+    body,
+    * {
+      font-family: 'Roboto', sans-serif !important;
+    }
+  </style>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
@@ -76,7 +83,8 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #f5f5f5;
+        background-color: #1A1A1A;
+        color: #FFFFFF;
       }
 
       #loading {
@@ -88,10 +96,24 @@
       .spinner {
         width: 50px;
         height: 50px;
-        border: 5px solid #e0e0e0;
-        border-top: 5px solid #3498db;
+        border: 5px solid #313131;
+        border-top: 5px solid #FF6B00;
         border-radius: 50%;
         animation: spin 1s linear infinite;
+      }
+
+      /* Asegura que no haya reglas globales que pongan texto gris */
+      a,
+      p,
+      span,
+      div,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        color: inherit;
       }
 
       @keyframes spin {
