--- a/web/index.html
+++ b/web/index.html
@@ -24,8 +24,9 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Kronos restobar">
+  <meta name="apple-mobile-web-app-title" content="Kronos Restobar">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="icons/Icon-192.png">
 
   <!-- Precarga de fuentes locales Roboto -->
   <style>
@@ -44,7 +45,10 @@
     }
   </style>
 
-  <!-- Favicon -->
+  <!-- Favicon optimizado -->
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/Icon-192.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/Icon-192.png" />
+  <link rel="shortcut icon" href="icons/Icon-192.png" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <link rel="alternate icon" type="image/png" href="favicon.png" />
 
@@ -63,7 +67,7 @@
   <!-- Fallback para Material Icons -->
   <link href="assets/styles/material_icons.css" rel="stylesheet">
 
-  <title>Kronos restobar - Sistema de Gestión</title>
+  <title>Kronos Restobar - Sistema de Gestión</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
